--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -115,6 +115,9 @@ img {
   width: 100%;
   overflow: hidden;
 }
+.logosize{
+  height: 60px;
+}
 
 /* 
 ---------------------------------------------
@@ -320,9 +323,9 @@ header
 */
 
 .pre-header {
-  background-color: #efefef;
-  height: 60px;
-  padding: 15px 0px;
+  background-color: #007981;
+  height: 38px;
+  padding: 5px 0px;
 }
 
 .pre-header ul li {
@@ -336,13 +339,13 @@ header
 }
 
 .pre-header ul.info li a {
-  color: #666666;
+  color: #e2e2e2;
   font-size: 15px;
   transition: all .3s;
 }
 
 .pre-header ul.info li a:hover {
-  color: #007981;
+  color: #e2e2e2;
 }
 
 .pre-header ul.info li a i {
@@ -359,11 +362,11 @@ header
 }
 
 .pre-header ul.social-media li a {
-  background-color: #666666;
-  color: #fff;
+  background-color: #e2e2e2;
+  color: #007981;
   display: inline-block;
   width: 30px;
-  height: 30px;
+  height: 28px;
   line-height: 30px;
   text-align: center;
   border-radius: 50%;
@@ -372,17 +375,18 @@ header
 }
 
 .pre-header ul.social-media li a:hover {
-  background-color: #007981;
+  background-color: #726ae3;
+  color: #e2e2e2;
 }
 
 .background-header {
   background-color: #fff!important;
-  height: 80px!important;
+  height: 75px!important;
   position: fixed!important;
   top: 0px;
   left: 0px;
   right: 0px;
-  box-shadow: 0px 5px 8px rgba(0,0,0,0.03);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.25) !important;
 }
 
 .background-header .logo,
@@ -402,7 +406,7 @@ header
 .background-header .nav li a.active:after {
   position: absolute;
   width: 100%;
-  height: 1px;
+  height: 3px;
   background-color: #007981;
   content: '';
   left: 50%;
@@ -495,9 +499,9 @@ header
 
 .header-area .main-nav .nav li a {
   display: block;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
-  color: #2a2a2a;
+  color: #726ae3;
   /*text-transform: capitalize;*/
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -818,11 +822,16 @@ header
   }
   .header-area .main-nav .nav li a {
     height: 50px !important;
+    font-weight: 500 !important;
     line-height: 50px !important;
     padding: 0px !important;
+    margin: 0px !important;
     border: none !important;
     background: #f7f7f7 !important;
+    border-bottom: 2px solid rgb(226, 226, 226) !important;
     color: #191a20 !important;
+    position: relative !important;
+    top: -2px !important;
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
@@ -1002,7 +1011,7 @@ Banner Style
   position: absolute;
   right: 0;
   top: 60px;
-  width: 1159px;
+  width: 964px;
   height: 797px;
 }
 
@@ -2091,7 +2100,7 @@ responsive
   }
   .main-banner {
     text-align: center;
-    padding: 226px 0px 30px 0px;
+    padding: 180px 0px 30px 0px;
   }
   .main-banner:before {
     display: none;
@@ -2126,7 +2135,7 @@ responsive
     border: none;
   }
   .experience .naccs .menu div.active {
-    border: 3px solid #006269;
+    border: 3px solid #0f878f;
     padding-top: 1px;
     padding-bottom: 1px;
   }
@@ -2157,6 +2166,9 @@ responsive
   }
   form#contact {
     padding: 45px;
+  }
+  .logosize{
+    height: 50px;
   }
 }
 
@@ -2239,8 +2251,17 @@ responsive
   .post-item .right-content p {
     display: none;
   }
+  #about{
+    padding-top: 80px;
+  }
+  .about-left-image img {
+    display: none;
+  }
   .about-us .about-item {
     margin-top: 15px;
+  }
+  .fill-form {
+    padding: 80px 30px 80px 30px;
   }
   form#contact {
     padding: 30px;
