--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -1560,16 +1560,64 @@ experience Style
 }
 
 .skills{
+  position: relative;
   width: 100%;
-  margin-left: 10px;
-  padding-left: 35px;
-  color: #666;
+  height: 40px;
+  background: -webkit-repeating-linear-gradient(#f5f5f5, #ffffff, #ffffff, #f5f5f5);
+  border: 1px solid #ededed;
+  border-radius: 50px;
   margin-bottom: 15px;
 }
 
 .skills .level{
+  position: absolute;
   width: 100%;
+  height: 40px;
+  top: 0px;
+  left: 0px;
+  background: -webkit-repeating-linear-gradient(#908ae3, #867fe2, #908ae3);
+  border-radius: 50px;
+  margin-bottom: 15px;
+  z-index: 1;
+}
+
+.skills h5{
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  left: 20px;
+  color: #ffffff;
+  text-align: left;
+  vertical-align: middle;
+  -ms-transform: translate(0%, -50%);
+  transform: translate(0%, -50%);
+  z-index: 2;
+}
+
+.skills p{
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  right: 20px;
+  color: #726ae3;
   text-align: right;
+  vertical-align: middle;
+  -ms-transform: translate(0%, -50%);
+  transform: translate(0%, -50%);
+  z-index: 2;
+}
+
+.skills .level p{
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  right: 20px;
+  color: #ffffff;
+  text-align: right;
+  vertical-align: middle;
+  -ms-transform: translate(0%, -50%);
+  transform: translate(0%, -50%);
+  z-index: 2;
 }
 
 /* 
