--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -1085,6 +1085,7 @@ About Style
 
 .label-info{
   line-height: 30px;
+  padding-left: 5px;
   font-weight: normal;
 }
 
@@ -1511,6 +1512,11 @@ experience Style
   margin-bottom: 30px;
 }
 
+.experience .padding-image {
+  padding-left: 40px;
+  padding-right: 10px;
+}
+
 .nacc .ticks-list span {
   position: relative;
   display: inline-block;
@@ -1569,7 +1575,7 @@ experience Style
   position: relative;
   width: 100%;
   height: 40px;
-  background: -webkit-repeating-linear-gradient(#f5f5f5, #ffffff, #ffffff, #f5f5f5);
+  background: -webkit-repeating-linear-gradient(#f0f0f0,#f7f7f7, #f0f0f0);
   border: 1px solid #ededed;
   border-radius: 50px;
   margin-bottom: 15px;
@@ -1578,10 +1584,11 @@ experience Style
 .skills .level{
   position: absolute;
   width: 100%;
-  height: 40px;
+  height: 38px;
   top: 0px;
-  left: 0px;
-  background: -webkit-repeating-linear-gradient(#908ae3, #867fe2, #908ae3);
+  left: 1px;
+  background: -webkit-repeating-linear-gradient(#867fe2, #9891ee, #867fe2);
+  border: 2px solid #f0f0f0;
   border-radius: 50px;
   margin-bottom: 15px;
   z-index: 1;
@@ -1591,7 +1598,8 @@ experience Style
   position: absolute;
   width: 50%;
   top: 50%;
-  left: 20px;
+  left: 25px;
+  font-size: 17px;
   color: #ffffff;
   text-align: left;
   vertical-align: middle;
@@ -1605,6 +1613,7 @@ experience Style
   width: 50%;
   top: 50%;
   right: 20px;
+  font-size: 14px;
   color: #726ae3;
   text-align: right;
   vertical-align: middle;
@@ -1804,19 +1813,25 @@ portfolio
 }
 
 .portfolio-post .down-content {
+  position: relative;
   border-bottom-right-radius: 23px;
   border-bottom-left-radius: 23px;
   background-color: #fff;
-  padding: 30px;
-  padding-bottom: 10px;
+  padding: 20px 30px;
 }
 
 .portfolio-post .down-content span.category {
-  font-size: 16px;
+  position: absolute;
+  width: 200px;
+  border: 1px solid #efefef;
+  border-right: none;
+  border-top-left-radius: 23px;
+  border-bottom-left-radius: 23px;
+  top: 20px;
+  right: 0px;
+  font-size: 14px;
   color: #726ae3;
-  padding: 8px 13px;
-  border: 1px solid #726ae3;
-  border-radius: 50px;
+  padding: 10px 20px;
   display: inline-block;
 }
 
@@ -1833,7 +1848,7 @@ portfolio
   font-weight: 600;
   color: #2a2a2a;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   line-height: 30px;
 }
 
@@ -1873,6 +1888,7 @@ portfolio
   display: inline-block;
   float: left;
   margin-right: 30px;
+  margin-bottom: 20px;
 }
 
 .post-item .thumb img {
@@ -1942,6 +1958,8 @@ portfolio
 	letter-spacing: 10px;
 	word-spacing: 6px;
 }
+
+
 
 
 /* 
@@ -2228,6 +2246,11 @@ responsive
     padding-left: 50px;
     padding-right: 50px;
   }
+  .experience .padding-image{
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 20px;
+  }
   .service-item {
     text-align: center;
   }
@@ -2410,10 +2433,86 @@ responsive
   .br-active{
     display: inline;
   }
+  .myImgSmall .text {
+    width: 95px !important;
+    font-size: 14px !important;
+    padding: 6px 8px !important;
+  }
 }
 
 
+/* 
+---------------------------------------------
+show image
+--------------------------------------------- 
+*/
 
+.myImg {
+  position: relative;
+  background-color: #000;
+}
 
+.myImgBig{
+  position: relative;
+  background-color: #000;
+  border-top-right-radius: 23px;
+  border-top-left-radius: 23px;
+}
+
+.myImgSmall {
+  position: relative;
+  background-color: #000;
+  border-radius: 23px;
+}
+
+.myImg .image,
+.myImgBig .image,
+.myImgSmall .image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.myImg .middle,
+.myImgBig .middle,
+.myImgSmall .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.myImg:hover .image,
+.myImgBig:hover .image,
+.myImgSmall:hover .image {
+  opacity: 0.3;
+  background-color: #000;
+  cursor: pointer;
+}
+
+.myImg:hover .middle,
+.myImgBig:hover .middle,
+.myImgSmall:hover .middle {
+  opacity: 1;
+}
+
+.myImg .text,
+.myImgBig .text,
+.myImgSmall .text {
+  width: 130px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  text-align: center;
+  font-size: 18px;
+  padding: 8px 13px;
+  border-radius: 50px;
+  cursor: pointer;
+}
 
 
