--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -1941,7 +1941,7 @@ portfolio
   background-size: cover;
   text-align: center;
   padding-top: 80px;
-  padding-bottom: 420px;
+  padding-bottom: 450px;
 }
 .flourish .tit2 {
 	font-size: 35px;
@@ -2243,8 +2243,8 @@ responsive
   }
   .experience ul.nacc li .right-image img {
     float: none;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .experience .padding-image{
     padding-left: 0px;
@@ -2514,5 +2514,87 @@ show image
   border-radius: 50px;
   cursor: pointer;
 }
+
+/* 
+---------------------------------------------
+modal show image
+--------------------------------------------- 
+*/
+
+.modal {
+  z-index:100;
+  display:none;
+  padding-top:100px;
+  position:fixed;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  overflow:auto;
+  background-color:rgb(0,0,0);
+  background-color:rgba(0,0,0,0.8)
+}
+
+.close {
+  text-decoration:none;
+  float:right;
+  font-size:85px;
+  font-weight:bold;
+  color:white;
+  animation-duration: 0.6s;
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+.modal-content {   
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+.close {
+  position: absolute;
+  bottom: -35px;
+  right: 0;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 300;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #726ae3;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+}
+
+
+
 
 
