--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -2524,7 +2524,7 @@ modal show image
 .modal {
   z-index:100;
   display:none;
-  padding-top:100px;
+  padding: 100px;
   position:fixed;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -2590,7 +2590,7 @@ modal show image
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
-        width: 100%;
+        width: 90%;
     }
 }
 
