--- a/css/nutdesign.css
+++ b/css/nutdesign.css
@@ -1594,7 +1594,7 @@ experience Style
   top: 0px;
   left: 1px;
   /*background: -webkit-repeating-linear-gradient(#867fe2, #9891ee, #867fe2);*/
-  background: -webkit-repeating-linear-gradient(#bfbbee, #b7b3eb, #bfbbee);
+  background: -webkit-repeating-linear-gradient(#a49eeb, #9e97eb, #a49eeb);
   border: 1px solid #f0f0f0;
   border-radius: 50px;
   margin-bottom: 15px;
